Fix Bug 238985 - "Send Again" does not respect Reply-To header

FIXED-IN: 4.9.1
BUG: 238985